Preparacion de la config para fb Analytics

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="app_name">SuperCubito</string>
     <string name="facebook_app_id">156496048280442</string>
+    <string name="fb_login_protocol_scheme">fb156496048280442</string>
 
 </resources>
