--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">SuperCubito</string>
-    <string name="facebook_app_id">156496048280442</string>
-    <string name="fb_login_protocol_scheme">fb156496048280442</string>
+    <string name="app_name">The Hard Way</string>
 
 </resources>
